Tue Dec 15 19:50:41 1998  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkctree.c gtk/gtkclist.c gtk/testgtk.c: Use 
	base[NORMAL] instead of bg[PRELIGHT] so CLists now can be
	used in detergent commercials.

Tue Dec 15 16:54:09 1998  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtklabel.h: Moved gtk_label_set() compatiblity
	define from <gtkcompat.h> to <gtklabel.h> for
	compatibility.

1998-12-15  Jeff Garzik  <jgarzik@pobox.com>

	* configure.in, gdk/Makefile.am, gtk/Makefile.am:
	Removed last remaining thread-related configure bits 
	that have been moved into GLib.

1998-12-15  Elliot Lee  <sopwith@bogus.cuc.ml.org>

	* gdk/gdkevents.c: Use G_IO_ERR|G_IO_HUP|G_IO_NVAL
	as the mask for checking for GDK_INPUT_EXCEPTION events.

1998-12-15  Martin Baulig  <martin@home-of-linux.org>

	* acinclude.m4: Make the gettext check for for libc5 systems.

	* autogen.sh: Not running gettextize fails on a fresh CVS checkout
	and we'll get a lot of bug reports tomorrow, so I add it back.

	* acinclude.m4: Rename AM_GNU_GETTEXT_GTK to AM_GTK_GNU_GETTEXT and
	AM_WITH_NLS_GTK to AM_GTK_WITH_NLS to avoid this ugly automake
	warnings.

Tue Dec 15 16:06:15 1998  Owen Taylor  <otaylor@redhat.com>

	* acinclude.m4: Provide a hacked version of the
	  gettext macros that never use the included gettext.
	 
	* Makefile.am configure.in: Remove references
	  to intl/
	
	* autogen.sh: Don't run gettextize.

Tue Dec 15 14:30:35 1998  Owen Taylor  <otaylor@redhat.com>

	* gdk/gdk.h gdk/gdkfonts.c: Added gdk_text_extents_wc()

        * Patch from Jonathan Blanford <jrb@redhat.com> to add line wrapping
	  to label. (Based on patch from Jeff Dairiki
	  <dairiki@mac-ceope.apl.washington.edu> gtk-dairiki-971208-0)

	- Adds new function gtk_label_set_line_wrap()
	- implement GTK_JUSTIFY_FILL.
	- rename gtk_label_set to gtk_label_set_text() add
	   gtk_label_set() to gtkcompat.h.

	* Use an internal wc representation in the label, so
	  that we handle underlining and line breaks correctly